--- a/src/docinfo-footer.html
+++ b/src/docinfo-footer.html
@@ -1,7 +1,7 @@
 <div id="footer">
 	Created using
 	<a
-		href="https://github.com/HarshKapadia2/asciidoctor-jet"
+		href="https://harshkapadia2.github.io/asciidoctor-jet"
 		target="_blank"
 		rel="noreferrer"
 		><i>Asciidoctor Jet</i></a
