:lipstick: update: Center footer

--- a/src/docinfo-footer.html
+++ b/src/docinfo-footer.html
@@ -1,5 +1,5 @@
 <div id="footer">
-	Created using
+	Created using&nbsp;
 	<a
 		href="https://harshkapadia2.github.io/asciidoctor-jet"
 		target="_blank"
